api: add entity api
